Refactored the logic for retrieving logic